dah dulu ntar lagi

--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@ shopping_cart
                     <i><img src="./img/add.png" alt="" width="30px" /></i>
                   </button>
                 </div>
-                <img src="./img/sea.png" alt="" />
+                <img src="1.png" alt="" />
                 <div class="card-body">
                   <h3>Keychain</h3>
                   <div class="star">
@@ -480,7 +480,7 @@ shopping_cart
                     <i><img src="./img/add.png" alt="" width="30px" /></i>
                   </button>
                 </div>
-                <img src="./img/beach.png" alt="" />
+                <img src="1.png" alt="" />
                 <div class="card-body">
                   <h3>Keychain</h3>
                   <div class="star">
@@ -524,7 +524,7 @@ shopping_cart
                     <i><img src="./img/add.png" alt="" width="30px" /></i>
                   </button>
                 </div>
-                <img src="./img/cnd.png" alt="" />
+                <img src="1.png" alt="" />
                 <div class="card-body">
                   <h3>Keychain</h3>
                   <div class="star">
@@ -568,7 +568,7 @@ shopping_cart
                     <i><img src="./img/add.png" alt="" width="30px" /></i>
                   </button>
                 </div>
-                <img src="./img/mrps.png" alt="" />
+                <img src="1.png" alt="" />
                 <div class="card-body">
                   <h3>Keychain</h3>
                   <div class="star">
